# seagull

./: .env  Cargo.toml  README.md
compose/: compose.yaml
compose/db_init/: init.sql
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/: App.svelte
frontend/src/lib/: AdminLogin.svelte  Alert.svelte  UserLogin.svelte
src/api/: admin.rs  cart.rs  coupon.rs  dish_type.rs  mod.rs  pay.rs  shop.rs
src/model/: db.rs
