[package]
name = "seagull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
chrono = "0.4.23"
dotenvy = "0.15.6"
log = "0.4.17"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

[[bin]]
name = "seagull"
path = "src/bin/main.rs"

[profile.release]
strip = true
